--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 YOUTUBE_CLIENT_ID=your_youtube_client_id_here
 YOUTUBE_CLIENT_SECRET=your_youtube_client_secret_here
+
+MCP_GITHUB_CLIENT_ID=your_MCP_GITHUB_CLIENT_ID_here
+MCP_GITHUB_CLIENT_SECRET=your_MCP_GITHUB_CLIENT_SECRET_here
+MCP_CALLBACK_PORT=8090
+MCP_AUTH_TIMEOUT_MS=60000
+GITHUB_APP_INSTALLATION_LINK=https://github.com/apps/ssw-yakshaver-staging/installations/select_target
