--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -100,11 +100,8 @@ jobs:
           GITHUB_APP_INSTALLATION_LINK: https://github.com/apps/ssw-yakshaver-staging/installations/select_target
         run: |
           printf "YOUTUBE_CLIENT_ID=%s\nYOUTUBE_CLIENT_SECRET=%s\n" "$YOUTUBE_CLIENT_ID" "$YOUTUBE_CLIENT_SECRET" > .env
-          Add-Content -Path ".env" -Value "`nMCP_GITHUB_CLIENT_ID=$env:MCP_GITHUB_CLIENT_ID"
-          Add-Content -Path ".env" -Value "`nMCP_GITHUB_CLIENT_SECRET=$env:MCP_GITHUB_CLIENT_SECRET"
-          Add-Content -Path ".env" -Value "`nMCP_CALLBACK_PORT=$env:MCP_CALLBACK_PORT"
-          Add-Content -Path ".env" -Value "`nMCP_AUTH_TIMEOUT_MS=$env:MCP_AUTH_TIMEOUT_MS"
-          Add-Content -Path ".env" -Value "`nGITHUB_APP_INSTALLATION_LINK=$env:GITHUB_APP_INSTALLATION_LINK"
+          printf "MCP_GITHUB_CLIENT_ID=%s\nMCP_GITHUB_CLIENT_SECRET=%s\n" "$MCP_GITHUB_CLIENT_ID" "$MCP_GITHUB_CLIENT_SECRET" >> .env
+          printf "MCP_CALLBACK_PORT=%s\nMCP_AUTH_TIMEOUT_MS=%s\nGITHUB_APP_INSTALLATION_LINK=%s\n" "$MCP_CALLBACK_PORT" "$MCP_AUTH_TIMEOUT_MS" "$GITHUB_APP_INSTALLATION_LINK" >> .env
 
       - name: Install dependencies
         run: npm ci --prefer-offline
