--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -99,9 +99,13 @@ jobs:
           MCP_AUTH_TIMEOUT_MS: 60000
           GITHUB_APP_INSTALLATION_LINK: https://github.com/apps/ssw-yakshaver-staging/installations/select_target
         run: |
-          printf "YOUTUBE_CLIENT_ID=%s\nYOUTUBE_CLIENT_SECRET=%s\n" "$YOUTUBE_CLIENT_ID" "$YOUTUBE_CLIENT_SECRET" > .env
-          printf "MCP_GITHUB_CLIENT_ID=%s\nMCP_GITHUB_CLIENT_SECRET=%s\n" "$MCP_GITHUB_CLIENT_ID" "$MCP_GITHUB_CLIENT_SECRET" >> .env
-          printf "MCP_CALLBACK_PORT=%s\nMCP_AUTH_TIMEOUT_MS=%s\nGITHUB_APP_INSTALLATION_LINK=%s\n" "$MCP_CALLBACK_PORT" "$MCP_AUTH_TIMEOUT_MS" "$GITHUB_APP_INSTALLATION_LINK" >> .env
+          printf "YOUTUBE_CLIENT_ID=%s\n" "$YOUTUBE_CLIENT_ID" > .env
+          printf "YOUTUBE_CLIENT_SECRET=%s\n" "$YOUTUBE_CLIENT_SECRET" >> .env
+          printf "MCP_GITHUB_CLIENT_ID=%s\n" "$MCP_GITHUB_CLIENT_ID" >> .env
+          printf "MCP_GITHUB_CLIENT_SECRET=%s\n" "$MCP_GITHUB_CLIENT_SECRET" >> .env
+          printf "MCP_CALLBACK_PORT=%s\n" "$MCP_CALLBACK_PORT" >> .env
+          printf "MCP_AUTH_TIMEOUT_MS=%s\n" "$MCP_AUTH_TIMEOUT_MS" >> .env
+          printf "GITHUB_APP_INSTALLATION_LINK=%s\n" "$GITHUB_APP_INSTALLATION_LINK" >> .env
 
       - name: Install dependencies
         run: npm ci --prefer-offline
