--- a/.github/workflows/automated-release-electron-app.yml
+++ b/.github/workflows/automated-release-electron-app.yml
@@ -20,8 +20,8 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
-      new_version: ${{ steps.bump_version.outputs.new_version }}
-      tag_name: ${{ steps.bump_version.outputs.tag_name }}
+      version: ${{ steps.get_version.outputs.version }}
+      tag_name: ${{ steps.get_version.outputs.tag_name }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
@@ -40,46 +40,38 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Determine version bump type
-        id: version_bump
+      - name: Get version from package.json
+        id: get_version
         run: |
-          # Always use patch bump for automated releases
-          BUMP_TYPE="patch"
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+          echo "Package version: $PACKAGE_VERSION"
 
-          echo "bump_type=${BUMP_TYPE}" >> $GITHUB_OUTPUT
-          echo "Version bump type: ${BUMP_TYPE}"
+          # Get the highest version tag from git
+          LATEST_TAG=$(git tag -l 'v*' --sort=-version:refname --merged HEAD | head -1)
+          echo "Latest tag: $LATEST_TAG"
 
-      - name: Bump version in package.json
-        id: bump_version
-        run: |
-          BUMP_TYPE="${{ steps.version_bump.outputs.bump_type }}"
+          if [ -z "$LATEST_TAG" ]; then
+            # No tags exist, start from package version
+            NEW_VERSION=$PACKAGE_VERSION
+          else
+            # Extract version number from tag (remove 'v' prefix)
+            LAST_VERSION="${LATEST_TAG#v}"
+            echo "Last released version: $LAST_VERSION"
 
-          # Get current version
-          CURRENT_VERSION=$(node -p "require('./package.json').version")
-          echo "Current version: $CURRENT_VERSION"
+            # Bump patch version
+            NEW_VERSION=$(node -e "
+              const [major, minor, patch] = '$LAST_VERSION'.split('.').map(Number);
+              console.log(\`\${major}.\${minor}.\${patch + 1}\`);
+            ")
+          fi
 
-          # Bump version using npm version command
-          npm version $BUMP_TYPE --no-git-tag-version
-
-          # Read the new version directly from package.json
-          NEW_VERSION=$(node -p "require('./package.json').version")
-
-          echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
+          echo "New version: $NEW_VERSION"
+          echo "version=${NEW_VERSION}" >> $GITHUB_OUTPUT
           echo "tag_name=v${NEW_VERSION}" >> $GITHUB_OUTPUT
-          echo "Bumped version to: $NEW_VERSION"
-
-      - name: Commit version bump
-        run: |
-          NEW_VERSION="${{ steps.bump_version.outputs.new_version }}"
-
-          git add package.json
-          git commit -m "chore: bump version to ${NEW_VERSION} [skip ci]"
-          git push origin test/release-trigger
-          echo "Version bump committed and pushed to test/release-trigger"
 
       - name: Create and push tag
         run: |
-          TAG_NAME="${{ steps.bump_version.outputs.tag_name }}"
+          TAG_NAME="${{ steps.get_version.outputs.tag_name }}"
 
           git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
           git push origin "$TAG_NAME"
@@ -89,13 +81,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          TAG_NAME="${{ steps.bump_version.outputs.tag_name }}"
-          NEW_VERSION="${{ steps.bump_version.outputs.new_version }}"
+          TAG_NAME="${{ steps.get_version.outputs.tag_name }}"
+          VERSION="${{ steps.get_version.outputs.version }}"
 
           # Create and publish the release with auto-generated notes
           # This will trigger the "Release Electron App" workflow (release-electron-app.yml)
           gh release create "$TAG_NAME" \
-            --title "Release $NEW_VERSION" \
+            --title "Release $VERSION" \
             --generate-notes \
             --target main
 
@@ -111,8 +103,8 @@ jobs:
             ✅ **Automated Release Created Successfully**
 
             **Release Details:**
-            - **Version:** ${{ steps.bump_version.outputs.new_version }}
-            - **Tag:** ${{ steps.bump_version.outputs.tag_name }}
-            - **Release:** https://github.com/${{ github.repository }}/releases/tag/${{ steps.bump_version.outputs.tag_name }}
+            - **Version:** ${{ steps.get_version.outputs.version }}
+            - **Tag:** ${{ steps.get_version.outputs.tag_name }}
+            - **Release:** https://github.com/${{ github.repository }}/releases/tag/${{ steps.get_version.outputs.tag_name }}
 
             You can monitor the build progress in the [Actions tab](https://github.com/${{ github.repository }}/actions/workflows/release-electron-app.yml).
