udpate version for release

--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -87,6 +87,16 @@ jobs:
         run: npm ci --prefer-offline
         working-directory: src/ui
 
+      - name: Update version for release
+        shell: pwsh
+        run: |
+          $version = "${{ needs.check-release.outputs.version }}"
+          if (-not $version) {
+            throw "Missing version output"
+          }
+          npm version $version --no-git-tag-version
+          Write-Host "Updated package.json version to $version"
+
       - name: Publish Windows app
         run: npm run publish -- --win
         env:
@@ -134,6 +144,16 @@ jobs:
       - name: Install UI dependencies
         run: npm ci --prefer-offline
         working-directory: src/ui
+
+      - name: Update version for release
+        run: |
+          VERSION="${{ needs.check-release.outputs.version }}"
+          if [[ -z "$VERSION" ]]; then
+            echo "Missing version output"
+            exit 1
+          fi
+          npm version "$VERSION" --no-git-tag-version
+          echo "Updated package.json version to $VERSION"
 
       - name: Publish macOS app
         run: npm run publish -- --mac
