--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -103,7 +103,7 @@ jobs:
           NODE_ENV: production
           CI: true
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_FOR_PULL_REQUEST: true
+          # PUBLISH_FOR_PULL_REQUEST: true
 
   build-macos:
     needs: check-release
@@ -161,4 +161,4 @@ jobs:
           NODE_ENV: production
           CI: true
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_FOR_PULL_REQUEST: true
+          # PUBLISH_FOR_PULL_REQUEST: true
