--- a/.github/workflows/automated-release-electron-app.yml
+++ b/.github/workflows/automated-release-electron-app.yml
@@ -1,11 +1,9 @@
 name: Automated Electron App Release
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - test/release-trigger
-    # test to trigger pr
 
 permissions:
   contents: write
@@ -16,8 +14,6 @@ env:
 
 jobs:
   auto-release:
-    # Only run if PR was merged (not just closed)
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.get_version.outputs.version }}
@@ -98,11 +94,20 @@ jobs:
 
           echo "Release created and published"
 
+      - name: Extract PR number from commit
+        id: pr_number
+        run: |
+          # Extract PR number from merge commit message (format: "Merge pull request #123 from...")
+          PR_NUMBER=$(git log -1 --pretty=%B | grep -oP '(?<=Merge pull request #)\d+' || echo "")
+          echo "pr_number=${PR_NUMBER}" >> $GITHUB_OUTPUT
+          echo "Found PR number: ${PR_NUMBER}"
+
       - name: Comment on PR
+        if: steps.pr_number.outputs.pr_number != ''
         uses: peter-evans/create-or-update-comment@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          issue-number: ${{ github.event.pull_request.number }}
+          issue-number: ${{ steps.pr_number.outputs.pr_number }}
           body: |
             ✅ **Automated Release Created Successfully**
 
