--- a/.gitignore
+++ b/.gitignore
@@ -61,10 +61,9 @@ typings/
 .env
 .env.test
 
-# Encrypted credentials (generated at build time)
 credentials.enc
-credentials.key
 app-config.json
+src/backend/config/credentials-key.ts
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
