--- a/.github/workflows/automated-release-electron-app.yml
+++ b/.github/workflows/automated-release-electron-app.yml
@@ -31,53 +31,53 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Configure Git
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
       - name: Get version from package.json
         id: get_version
         run: |
-          PACKAGE_VERSION=$(node -p "require('./package.json').version")
-          echo "Package version: $PACKAGE_VERSION"
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          echo "Current package version: $CURRENT_VERSION"
 
-          LATEST_TAG=$(git tag -l 'v*' --sort=-version:refname --merged HEAD | head -1)
-          echo "Latest tag: $LATEST_TAG"
+          # Bump version with logic
+          # patch < 9: bump patch
+          # patch = 9: bump minor, reset patch to 0
+          # minor = 9 and patch = 9: bump major, reset to 0.0
+          NEW_VERSION=$(node -e "
+            const [major, minor, patch] = '$CURRENT_VERSION'.split('.').map(Number);
+            let newMajor = major, newMinor = minor, newPatch = patch;
 
-          if [ -z "$LATEST_TAG" ]; then
-            NEW_VERSION=$PACKAGE_VERSION
-          else
-            # Extract version number from tag (remove 'v' prefix)
-            LAST_VERSION="${LATEST_TAG#v}"
-            echo "Last released version: $LAST_VERSION"
+            if (patch < 9) {
+              newPatch = patch + 1;
+            } else if (minor < 9) {
+              newMinor = minor + 1;
+              newPatch = 0;
+            } else {
+              newMajor = major + 1;
+              newMinor = 0;
+              newPatch = 0;
+            }
 
-            # Bump version with logic
-            # patch < 9: bump patch
-            # patch = 9: bump minor, reset patch to 0
-            # minor = 9 and patch = 9: bump major, reset to 0.0
-            NEW_VERSION=$(node -e "
-              const [major, minor, patch] = '$LAST_VERSION'.split('.').map(Number);
-              let newMajor = major, newMinor = minor, newPatch = patch;
-
-              if (patch < 9) {
-                newPatch = patch + 1;
-              } else if (minor < 9) {
-                newMinor = minor + 1;
-                newPatch = 0;
-              } else {
-                newMajor = major + 1;
-                newMinor = 0;
-                newPatch = 0;
-              }
-
-              console.log(\`\${newMajor}.\${newMinor}.\${newPatch}\`);
-            ")
-          fi
+            console.log(\`\${newMajor}.\${newMinor}.\${newPatch}\`);
+          ")
 
           echo "New version: $NEW_VERSION"
           echo "version=${NEW_VERSION}" >> $GITHUB_OUTPUT
           echo "tag_name=v${NEW_VERSION}" >> $GITHUB_OUTPUT
+
+      - name: Update package.json version
+        run: |
+          VERSION="${{ steps.get_version.outputs.version }}"
+          npm version $VERSION --no-git-tag-version
+          echo "Updated package.json to version $VERSION"
+
+      - name: Commit version update
+        run: |
+          VERSION="${{ steps.get_version.outputs.version }}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add package.json package-lock.json
+          git commit -m "chore: bump version to v$VERSION [skip ci]"
+          git push origin test/release-trigger
+          echo "Committed and pushed version update to main"
 
       - name: Create and publish GitHub Release
         env:
