--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "json-schema-to-zod": "^2.6.1",
     "openai": "^6.3.0",
     "tmp": "^0.2.5",
-    "yt-dlp-exec": "^1.0.2"
+    "youtube-dl-exec": "^3.0.27"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
