--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -1,5 +1,6 @@
 name: Release Electron App
 
+# Keep the `release` trigger option to allow manual publishing of releases if needed.
 on:
   release:
     types: [published]
