--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "googleapis": "^166.0.0",
     "json-schema-to-zod": "^2.6.1",
     "openai": "^6.3.0",
-    "tmp": "^0.2.5",
-    "youtube-dl-exec": "^3.0.27"
+    "tmp": "^0.2.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
