--- a/.github/workflows/automated-release-electron-app.yml
+++ b/.github/workflows/automated-release-electron-app.yml
@@ -3,7 +3,7 @@ name: Automated Electron App Release
 on:
   push:
     branches:
-      - main
+      - test/release-trigger
 
 permissions:
   contents: write
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
         with:
-          ref: main
+          ref: test/release-trigger
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -64,7 +64,7 @@ jobs:
           gh release create "$TAG_NAME" \
             --title "$VERSION" \
             --generate-notes \
-            --target main \
+            --target test/release-trigger \
             --draft=false
 
           echo "Release created and published"
@@ -106,5 +106,5 @@ jobs:
     uses: ./.github/workflows/release-electron-app.yml
     with:
       tag_name: ${{ needs.auto-release.outputs.tag_name }}
-      target: main
+      target: test/release-trigger
     secrets: inherit
