--- a/.github/workflows/automated-release-electron-app.yml
+++ b/.github/workflows/automated-release-electron-app.yml
@@ -4,7 +4,7 @@ run-name: "YakShaver App Release - Build #${{ github.run_number }}"
 on:
   push:
     branches:
-      - test/release-trigger
+      - main
 
 permissions:
   contents: write
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
         with:
-          ref: test/release-trigger
+          ref: main
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -58,7 +58,7 @@ jobs:
           gh release create "$TAG_NAME" \
             --title "$VERSION" \
             --generate-notes \
-            --target test/release-trigger \
+            --target main \
             --draft=false
 
           echo "Release created and published"
@@ -100,5 +100,5 @@ jobs:
     uses: ./.github/workflows/release-electron-app.yml
     with:
       tag_name: ${{ needs.auto-release.outputs.tag_name }}
-      target: test/release-trigger
+      target: main
     secrets: inherit
