--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "make": "npm run build && cd src/ui && npm run build && cd ../.. && electron-builder --config electron-builder.config.js",
     "publish": "npm run build && cd src/ui && npm run build && cd ../.. && electron-builder --publish always --config electron-builder.config.js",
     "lint": "biome check --write .",
-    "format": "biome format --write ."
+    "format": "biome format --write .",
+    "test": "jest"
   },
   "keywords": [],
   "author": {
@@ -47,12 +48,15 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
     "@electron/fuses": "^1.8.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@types/tmp": "^0.2.6",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "electron": "^39.2.4",
     "electron-builder": "^26.0.12",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.9.3",
     "wait-on": "^9.0.3"
   }
