--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ MCP_GITHUB_CLIENT_SECRET=your_MCP_GITHUB_CLIENT_SECRET_here
 MCP_CALLBACK_PORT=8090
 MCP_AUTH_TIMEOUT_MS=60000
 GITHUB_APP_INSTALLATION_LINK=https://github.com/apps/ssw-yakshaver-staging/installations/select_target
+
+AZURE_CLIENT_ID=your_azure_client_id_here
+AZURE_TENANT_ID=your_azure_tenant_id_here
+GRAPH_SCOPES=User.Read
+AZURE_CUSTOM_PROTOCOL=msal{your_azure_client_id_here}
