--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -116,6 +116,11 @@ jobs:
           MCP_CALLBACK_PORT: 8090
           MCP_AUTH_TIMEOUT_MS: 60000
           GITHUB_APP_INSTALLATION_LINK: https://github.com/apps/ssw-yakshaver-staging/installations/select_target
+          PORTAL_API_URL: https://api.yakshaver.ai/api
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          GRAPH_SCOPES: ${{ secrets.GRAPH_SCOPES }}
+          AZURE_CUSTOM_PROTOCOL: ${{ secrets.AZURE_CUSTOM_PROTOCOL }}
         run: |
           "YOUTUBE_CLIENT_ID=$env:YOUTUBE_CLIENT_ID" | Out-File -FilePath ".env" -Encoding utf8 -NoNewline
           Add-Content -Path ".env" -Value "`nYOUTUBE_CLIENT_SECRET=$env:YOUTUBE_CLIENT_SECRET"
@@ -124,6 +129,11 @@ jobs:
           Add-Content -Path ".env" -Value "`nMCP_CALLBACK_PORT=$env:MCP_CALLBACK_PORT"
           Add-Content -Path ".env" -Value "`nMCP_AUTH_TIMEOUT_MS=$env:MCP_AUTH_TIMEOUT_MS"
           Add-Content -Path ".env" -Value "`nGITHUB_APP_INSTALLATION_LINK=$env:GITHUB_APP_INSTALLATION_LINK"
+          Add-Content -Path ".env" -Value "`nPORTAL_API_URL=$env:PORTAL_API_URL"
+          Add-Content -Path ".env" -Value "`nAZURE_CLIENT_ID=$env:AZURE_CLIENT_ID"
+          Add-Content -Path ".env" -Value "`nAZURE_TENANT_ID=$env:AZURE_TENANT_ID"
+          Add-Content -Path ".env" -Value "`nGRAPH_SCOPES=$env:GRAPH_SCOPES"
+          Add-Content -Path ".env" -Value "`nAZURE_CUSTOM_PROTOCOL=$env:AZURE_CUSTOM_PROTOCOL"
 
       - name: Install dependencies
         run: npm ci --prefer-offline
@@ -196,6 +206,11 @@ jobs:
           MCP_CALLBACK_PORT: 8090
           MCP_AUTH_TIMEOUT_MS: 60000
           GITHUB_APP_INSTALLATION_LINK: https://github.com/apps/ssw-yakshaver-staging/installations/select_target
+          PORTAL_API_URL: https://api.yakshaver.ai/api
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          GRAPH_SCOPES: ${{ secrets.GRAPH_SCOPES }}
+          AZURE_CUSTOM_PROTOCOL: ${{ secrets.AZURE_CUSTOM_PROTOCOL }}
         run: |
           printf "YOUTUBE_CLIENT_ID=%s\n" "$YOUTUBE_CLIENT_ID" > .env
           printf "YOUTUBE_CLIENT_SECRET=%s\n" "$YOUTUBE_CLIENT_SECRET" >> .env
@@ -204,6 +219,11 @@ jobs:
           printf "MCP_CALLBACK_PORT=%s\n" "$MCP_CALLBACK_PORT" >> .env
           printf "MCP_AUTH_TIMEOUT_MS=%s\n" "$MCP_AUTH_TIMEOUT_MS" >> .env
           printf "GITHUB_APP_INSTALLATION_LINK=%s\n" "$GITHUB_APP_INSTALLATION_LINK" >> .env
+          printf "PORTAL_API_URL=%s\n" "$PORTAL_API_URL" >> .env
+          printf "AZURE_CLIENT_ID=%s\n" "$AZURE_CLIENT_ID" >> .env
+          printf "AZURE_TENANT_ID=%s\n" "$AZURE_TENANT_ID" >> .env
+          printf "GRAPH_SCOPES=%s\n" "$GRAPH_SCOPES" >> .env
+          printf "AZURE_CUSTOM_PROTOCOL=%s\n" "$AZURE_CUSTOM_PROTOCOL" >> .env
 
       - name: Install dependencies
         run: npm ci --prefer-offline
