--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -84,6 +84,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --prefer-offline
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install UI dependencies
         run: npm ci --prefer-offline
@@ -143,6 +145,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --prefer-offline
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install UI dependencies
         run: npm ci --prefer-offline
