L⚠️ ◾ Added Microsoft Auth for connecting to Portal (#327)
* add initial logic of microsoft auth

* clean up

* fix authentication token

* ui improvements

* integrate portal

* added env variables

* rename env

* clear data when refresh is clicked

* added sample url comment

* format file

* moved getInitials to utils and format

* added myshaves data interface

* centralize microsoft auth under auth for better readability

* added codeblock component

* changed protocol to "yakshaver-desktop"

* format

* change protocol

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@ai-sdk/deepseek": "^1.0.30",
     "@ai-sdk/mcp": "^0.0.8",
     "@ai-sdk/openai": "^2.0.75",
+    "@azure/msal-node": "^3.8.4",
     "@azure/openai": "^2.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@modelcontextprotocol/sdk": "^1.21.1",
     "ai": "^6.0.0-beta.114",
     "dotenv": "^17.2.3",
@@ -40,6 +42,7 @@
     "get-port": "^7.1.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "json-schema-to-zod": "^2.6.1",
     "openai": "^6.3.0",
     "tmp": "^0.2.5",
