modify for pre-release

--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -173,14 +173,13 @@ jobs:
       # the yt-dlp binary. Windows uses an alternate method and avoids this error.
       - name: Install yt-dlp binary manually
         run: |
-          # 1. Ensure the target directory exists
           mkdir -p node_modules/youtube-dl-exec/bin
 
-          # 2. Download the binary using the GitHub CLI (Authenticated)
+          # Download the binary using the GitHub CLI (Authenticated)
           # We rename it to 'yt-dlp' so the package finds it
           gh release download --repo yt-dlp/yt-dlp --pattern 'yt-dlp_macos' --output node_modules/youtube-dl-exec/bin/yt-dlp
           
-          # 3. Make the binary executable
+          # Make the binary executable
           chmod +x node_modules/youtube-dl-exec/bin/yt-dlp
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
