--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -137,10 +137,26 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --prefer-offline
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install UI dependencies
         run: npm ci --prefer-offline
         working-directory: src/ui
+
+      - name: Install yt-dlp binary manually
+        run: |
+          # 1. Ensure the target directory exists
+          mkdir -p node_modules/youtube-dl-exec/bin
+
+          # 2. Download the binary using the GitHub CLI (Authenticated)
+          # We rename it to 'yt-dlp' so the package finds it
+          gh release download --repo yt-dlp/yt-dlp --pattern 'yt-dlp_macos' --output node_modules/youtube-dl-exec/bin/yt-dlp
+          
+          # 3. Make the binary executable
+          chmod +x node_modules/youtube-dl-exec/bin/yt-dlp
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Update version for pre-release
         shell: pwsh
@@ -185,6 +201,8 @@ jobs:
       github.event_name != 'pull_request' ||
       github.event.action != 'closed'
     runs-on: macos-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -227,6 +245,24 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --prefer-offline
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          YOUTUBE_DL_SKIP_DOWNLOAD: true
+
+      # Manual download for macOS is needed because the 'youtube-dl-exec' script for Unix hits the GitHub API unauthenticated rate limit (60/hr) while attempting to find 
+      # the yt-dlp binary. Windows uses an alternate method and avoids this error.
+      - name: Install yt-dlp binary manually
+        run: |
+          mkdir -p node_modules/youtube-dl-exec/bin
+
+          # Download the binary using the GitHub CLI (Authenticated)
+          # We rename it to 'yt-dlp' so the package finds it
+          gh release download --repo yt-dlp/yt-dlp --pattern 'yt-dlp_macos' --output node_modules/youtube-dl-exec/bin/yt-dlp
+          
+          # Make the binary executable
+          chmod +x node_modules/youtube-dl-exec/bin/yt-dlp
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install UI dependencies
         run: npm ci --prefer-offline
