--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -21,6 +21,6 @@
       "@shared/*": ["../shared/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "../shared"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
